--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "install": "npm run build"
   },
+  "repository": "git@github.com:baravak/enNumber.ts.git",
   "keywords": [],
   "author": "",
   "license": "ISC",
