--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "en-number",
+  "name": "@baravak/en-number",
   "version": "0.1.0",
   "description": "Convert character numbers from any language to English",
   "scripts": {
@@ -8,9 +8,15 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "install": "npm run build"
   },
-  "repository": "git@github.com:baravak/enNumber.ts.git",
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:baravak/enNumber.ts.git"
+  },
+  "keywords": [
+    "fa2en",
+    "ar2en"
+  ],
+  "author": "M.H.Salehi",
   "license": "ISC",
   "main": "build/index.js",
   "module": "build/index.js",
