--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@baravak/en-number",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Convert character numbers from any language to English",
   "scripts": {
     "dev": "npx nodemon",
@@ -12,6 +12,7 @@
     "type": "git",
     "url": "git@github.com:baravak/enNumber.ts.git"
   },
+  "private": false,
   "keywords": [
     "fa2en",
     "ar2en"
