--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@baravak/en-number",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Convert character numbers from any language to English",
   "scripts": {
     "dev": "npx nodemon",
     "build": "tsc",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "install": "npm run build"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "repository": {
     "type": "git",
